--- a/package.json
+++ b/package.json
@@ -21,66 +21,66 @@
     "test:e2e": "jest --config ./test/jest-e2e.json"
   },
   "dependencies": {
-    "@crawlee/playwright": "^3.11.0",
-    "@nestjs-modules/mailer": "^1.11.2",
-    "@nestjs/common": "^10.0.0",
-    "@nestjs/config": "^3.2.0",
-    "@nestjs/core": "^10.0.0",
-    "@nestjs/jwt": "^10.2.0",
-    "@nestjs/mapped-types": "*",
-    "@nestjs/passport": "^10.0.3",
-    "@nestjs/platform-express": "^10.0.0",
-    "@nestjs/schedule": "^4.0.1",
-    "@nestjs/serve-static": "^4.0.2",
-    "@nestjs/typeorm": "^10.0.2",
-    "bcryptjs": "^2.4.3",
+    "@crawlee/playwright": "^3.13.0",
+    "@nestjs-modules/mailer": "^2.0.2",
+    "@nestjs/common": "^11.0.12",
+    "@nestjs/config": "^4.0.1",
+    "@nestjs/core": "^11.0.12",
+    "@nestjs/jwt": "^11.0.0",
+    "@nestjs/mapped-types": "^2.1.0",
+    "@nestjs/passport": "^11.0.5",
+    "@nestjs/platform-express": "^11.0.12",
+    "@nestjs/schedule": "^5.0.1",
+    "@nestjs/serve-static": "^5.0.3",
+    "@nestjs/typeorm": "^11.0.0",
+    "bcryptjs": "^3.0.2",
     "chalk": "^4.1.2",
-    "class-transformer": "^0.3.1",
+    "cheerio": "1.0.0",
+    "class-transformer": "^0.5.1",
     "class-validator": "^0.14.1",
     "cross-env": "^7.0.3",
-    "dayjs": "^1.11.10",
+    "dayjs": "^1.11.13",
     "exceljs": "^4.4.0",
-    "multer": "1.4.5-lts.1",
-    "mysql2": "^3.9.2",
-    "nodemailer": "^6.9.13",
+    "multer": "1.4.5-lts.2",
+    "mysql2": "^3.14.0",
+    "nodemailer": "^6.10.0",
     "passport": "^0.7.0",
     "passport-jwt": "^4.0.1",
     "passport-local": "^1.0.0",
-    "path-to-regexp": "^6.2.1",
-    "redis": "^4.6.13",
-    "reflect-metadata": "^0.1.13",
-    "rxjs": "^7.8.1",
-    "typeorm": "^0.3.20",
-    "playwright": "^1.45.2",
-    "cheerio": "1.0.0-rc.12",
-    "winston": "^3.12.0",
+    "path-to-regexp": "^8.2.0",
+    "playwright": "^1.51.1",
+    "redis": "^4.7.0",
+    "reflect-metadata": "^0.2.2",
+    "rxjs": "^7.8.2",
+    "typeorm": "^0.3.21",
+    "winston": "^3.17.0",
     "winston-daily-rotate-file": "^5.0.0"
   },
   "devDependencies": {
-    "@nestjs/cli": "^10.0.0",
-    "@nestjs/schematics": "^10.0.0",
-    "@nestjs/testing": "^10.0.0",
-    "@types/bcryptjs": "^2.4.6",
-    "@types/express": "^4.17.17",
-    "@types/jest": "^29.5.2",
-    "@types/multer": "^1.4.11",
-    "@types/node": "^20.3.1",
+    "@nestjs/cli": "^11.0.5",
+    "@nestjs/schematics": "^11.0.2",
+    "@nestjs/testing": "^11.0.12",
+    "@types/bcryptjs": "^3.0.0",
+    "@types/express": "^5.0.1",
+    "@types/jest": "^29.5.14",
+    "@types/multer": "^1.4.12",
+    "@types/node": "^22.13.13",
     "@types/passport-local": "^1.0.38",
-    "@types/supertest": "^2.0.12",
-    "@typescript-eslint/eslint-plugin": "^6.0.0",
-    "@typescript-eslint/parser": "^6.0.0",
-    "eslint": "^8.42.0",
-    "eslint-config-prettier": "^9.0.0",
-    "eslint-plugin-prettier": "^5.0.0",
-    "jest": "^29.5.0",
-    "prettier": "^3.0.0",
+    "@types/supertest": "^6.0.3",
+    "@typescript-eslint/eslint-plugin": "^8.28.0",
+    "@typescript-eslint/parser": "^8.28.0",
+    "eslint": "^9.23.0",
+    "eslint-config-prettier": "^10.1.1",
+    "eslint-plugin-prettier": "^5.2.4",
+    "jest": "^29.7.0",
+    "prettier": "^3.5.3",
     "source-map-support": "^0.5.21",
-    "supertest": "^6.3.3",
-    "ts-jest": "^29.1.0",
-    "ts-loader": "^9.4.3",
-    "ts-node": "^10.9.1",
+    "supertest": "^7.1.0",
+    "ts-jest": "^29.3.0",
+    "ts-loader": "^9.5.2",
+    "ts-node": "^10.9.2",
     "tsconfig-paths": "^4.2.0",
-    "typescript": "^5.1.3"
+    "typescript": "^5.8.2"
   },
   "jest": {
     "moduleFileExtensions": [
