--- a/.env
+++ b/.env
@@ -14,11 +14,11 @@ REDIS_HOST=localhost
 REDIS_PORT=6379
 
 # 邮箱配置
-EMAIL_PASS=EBBOFYAQDWBLOTZY
-EMAIL_HOST=smtp.163.com
+EMAIL_PASS=mrowedxkdannbcch
+EMAIL_HOST=smtp.qq.com
 EMAIL_PORT=465
 EMAIL_SECURE=true
-EMAIL_USER=jmin95@163.com
+EMAIL_USER=995883133@qq.com
 EMAIL_ALIAS=store_web_project
 
 API_PREFIX=/api
